Simplify PidFile and add distro tests for pid module
Signed-off-by: Joakim Erdfelt <joakim.erdfelt@gmail.com>